# imcp2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml  docker.yml  release.yml  validate-deploy.yml
candid-wasm/: Cargo.toml
candid-wasm/src/: lib.rs
deploy/native/: Caddyfile  README.md  build.sh  caddy.service  deploy.sh  imcp-status.service  mcp-poc.service
deploy/terraform/: README.md  cloud-init.sh.tftpl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
monitoring/mcp-status/: README.md  checks.js  checks.test.js  cli.js  config.js  package.json  report.js  server.js
monitoring/mcp-status/public/: index.html
src/: auth.rs  delegation.rs  discover.rs  identities.rs  main.rs  management.rs  proposals.rs  skills.rs  tunnel.rs
static/: app.html  authorize.html  candid-reference.md  candid-textual-syntax.md
static/wasm/: candid_wasm.d.ts  candid_wasm.js  candid_wasm_bg.wasm  candid_wasm_bg.wasm.d.ts  package.json
tools/icp-mcp-server/: Cargo.toml  Dockerfile  README.md
tools/icp-mcp-server/src/: main.rs
