[package]
name = "mcp-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.7", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "auth",
] }
ic-agent = "0.47"
candid = { version = "0.10", features = ["value"] }
candid_parser = "0.3.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum = "0.8"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.7", features = ["cors"] }
ic-signature-verification = "0.3.0"
sha2 = "0.11.0"
base64 = "0.22.1"
hex = "0.4.3"
ed25519-dalek = "2.2.0"
ic-representation-independent-hash = "3.2.0"
p256 = { version = "0.13.2", features = ["ecdsa"] }
regex = "1.12.4"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
getrandom = "0.3.4"
urlencoding = "2.1.3"
