[package]
name = "candid-wasm"
version = "0.1.0"
edition = "2021"

# Standalone WASM crate (not part of the server's build). Built with:
#   wasm-pack build candid-wasm --target web -d ../static/wasm
# Exposes textual-Candid encode/decode so the browser does it locally — what the
# user reviews is exactly what gets encoded and signed (what-you-see-is-what-you-sign).

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
candid = { version = "0.10", features = ["value"] }
candid_parser = "0.3"

[profile.release]
opt-level = "s"
